// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Card Card 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Card-sc-1moun4p-0 fnENSi"
    >
      I am a card.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card Cardset 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 hQvIAg CardSet-sc-1z0gb66-0 dgikwR"
    >
      <div
        class="Box-xda4ls-0 Card-sc-1moun4p-0 fnENSi"
      >
        I am a 1st card in a cardset.
      </div>
      <div
        class="Box-xda4ls-0 Card-sc-1moun4p-0 fnENSi"
      >
        I am a 2nd card in a cardset.
      </div>
      <div
        class="Box-xda4ls-0 Card-sc-1moun4p-0 fnENSi"
      >
        I am a 3rd card in a cardset.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card Custom card 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Card-sc-1moun4p-0 fXNXSE"
      color="white"
    >
      I am a custom card.
    </div>
  </div>
</div>
`;
